--- a/index.html
+++ b/index.html
@@ -222,8 +222,7 @@
 
           <!-- Box 1 -->
           <div
-            class="flex flex-col p-10 space-y-6 rounded-lg bg-gray-100 dark:bg-darkBlue3 md:w-1/3"
-          >
+            class="flex flex-col p-10 space-y-6 rounded-lg bg-gray-100 dark:bg-darkBlue3 md:w-1/3">
             <p class="text-sm leading-5 md:text-lg">
               Fylo has improved our team productivity by an order of magnitude.
               Since making the switch our team has become a well-oiled
@@ -232,10 +231,7 @@
             <!-- Customer Info -->
             <div class="flex space-x-4">
               <img
-                src="images/profile-1.jpg"
-                alt=""
-                class="w-10 h-10 rounded-full"
-              />
+                src="images/profile-1.jpg" alt="" class="w-10 h-10 rounded-full"/>
               <div>
                 <h5 class="text-sm font-semibold">Satish Patel</h5>
                 <p class="text-xs font-extralight">Founder & CEO. Huddle</p>
@@ -295,8 +291,7 @@
     <!-- Early Access Section -->
     <section id="early-access" class="relative px-6 dark:bg-darkBlue2 md:px-0">
       <div
-        class="relative -top-40 max-w-4xl mx-auto p-10 px-6 space-y-6 text-center rounded-lg bg-gray-200 dark:bg-darkBlue1 md:px-16"
-      >
+        class="relative -top-40 max-w-4xl mx-auto p-10 px-6 space-y-6 text-center rounded-lg bg-gray-200 dark:bg-darkBlue1 md:px-16">
         <h5 class="text-2xl font-bold">Get early access today</h5>
         <p class="text-sm">
           It only takes a minute to sign up and our free starter tier is
@@ -305,8 +300,7 @@
         </p>
         <!-- Input & Button Container -->
         <div
-          class="flex flex-col items-start space-y-6 md:flex-row md:space-y-0 md:space-x-6"
-        >
+          class="flex flex-col items-start space-y-6 md:flex-row md:space-y-0 md:space-x-6">
           <div class="w-full md:flex-1">
             <input
               type="text"
@@ -316,8 +310,7 @@
           </div>
 
           <button
-            class="w-full p-3 px-6 rounded-full bg-accentCyan md:w-56 hover:scale-95"
-          >
+            class="w-full p-3 px-6 rounded-full bg-accentCyan md:w-56 hover:scale-95">
             Get Started For Free
           </button>
         </div>
@@ -329,8 +322,7 @@
       <div class="container mx-auto pt-12 px-5 pb-10">
         <!-- Flex Container For All Items -->
         <div
-          class="flex flex-col justify-between space-y-24 md:flex-row md:space-y-0"
-        >
+          class="flex flex-col justify-between space-y-24 md:flex-row md:space-y-0">
           <!-- Email & Phone -->
           <div class="mt-10 space-y-6">
             <div class="flex items-center space-x-3 md:-mt-10">
@@ -349,8 +341,7 @@
 
           <!-- Menus -->
           <div
-            class="flex flex-col space-y-10 text-xl md:text-base md:space-x-20 md:space-y-0 md:flex-row"
-          >
+            class="flex flex-col space-y-10 text-xl md:text-base md:space-x-20 md:space-y-0 md:flex-row">
             <div class="flex flex-col space-y-3">
               <a href="#">About</a>
               <a href="#">Jobs</a>
